--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
         <h1>Calculadora</h1>
         <p id="resultado">resultado</p>
         <table>
-            
+           <tr>
+                <td><buttonclass="botao">c</button></td>
+           </tr>
+
         </table>
     </div>
 </body>
